// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  class="input-and-error-container"
  data-testid="text-input"
>
  <div
    class="input-and-label-container"
  >
    <div
      class="input-container"
    >
      <input
        class="input"
        id="id"
        name="id"
        type="text"
        value=""
      />
    </div>
    <label
      class="label"
      for="id"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`renders correctly 2`] = `
<div
  class="input-and-error-container"
  data-testid="text-input"
>
  <div
    class="input-and-label-container"
  >
    <div
      class="input-container"
    >
      <input
        class="input"
        id="id"
        name="id"
        type="password"
        value="abcde"
      />
      <svg
        aria-hidden="false"
        aria-label="Show Password"
        class="eye"
        fill="currentColor"
        tabindex="0"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 12.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
        />
        <path
          clip-rule="evenodd"
          d="M.664 10.59a1.651 1.651 0 010-1.186A10.004 10.004 0 0110 3c4.257 0 7.893 2.66 9.336 6.41.147.381.146.804 0 1.186A10.004 10.004 0 0110 17c-4.257 0-7.893-2.66-9.336-6.41zM14 10a4 4 0 11-8 0 4 4 0 018 0z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <label
      class="label label-selected"
      for="id"
    >
      Password
    </label>
  </div>
</div>
`;

exports[`renders correctly 3`] = `
<div
  class="input-and-error-container"
  data-testid="text-input"
>
  <div
    class="input-and-label-container"
  >
    <div
      class="input-container"
    >
      <input
        class="input"
        id="id"
        name="id"
        type="password"
        value="abcde"
      />
      <svg
        aria-hidden="false"
        aria-label="Show Password"
        class="eye"
        fill="currentColor"
        tabindex="0"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 12.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
        />
        <path
          clip-rule="evenodd"
          d="M.664 10.59a1.651 1.651 0 010-1.186A10.004 10.004 0 0110 3c4.257 0 7.893 2.66 9.336 6.41.147.381.146.804 0 1.186A10.004 10.004 0 0110 17c-4.257 0-7.893-2.66-9.336-6.41zM14 10a4 4 0 11-8 0 4 4 0 018 0z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <label
      class="label label-selected"
      for="id"
    >
      Password
    </label>
  </div>
  <div
    class="container"
    data-testid="container"
  >
    <div
      class="validator no-match"
    >
      <svg
        aria-hidden="true"
        class="icon x"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z"
          fill-rule="evenodd"
        />
      </svg>
       
      At least 8 characters long
    </div>
    <div
      class="validator match"
    >
      <svg
        aria-hidden="true"
        class="icon check"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M19.916 4.626a.75.75 0 01.208 1.04l-9 13.5a.75.75 0 01-1.154.114l-6-6a.75.75 0 011.06-1.06l5.353 5.353 8.493-12.739a.75.75 0 011.04-.208z"
          fill-rule="evenodd"
        />
      </svg>
       
      At least 1 lowercase letter
    </div>
    <div
      class="validator no-match"
    >
      <svg
        aria-hidden="true"
        class="icon x"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z"
          fill-rule="evenodd"
        />
      </svg>
       
      At least 1 uppercase letter
    </div>
    <div
      class="validator no-match"
    >
      <svg
        aria-hidden="true"
        class="icon x"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z"
          fill-rule="evenodd"
        />
      </svg>
       
      At least 1 number
    </div>
    <div
      class="validator no-match"
    >
      <svg
        aria-hidden="true"
        class="icon x"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z"
          fill-rule="evenodd"
        />
      </svg>
       
      At least 1 special character
    </div>
  </div>
</div>
`;

exports[`renders correctly 4`] = `
<div
  class="input-and-error-container"
  data-testid="text-input"
>
  <div
    class="input-and-label-container"
  >
    <div
      class="input-container"
    >
      <input
        class="input input-error"
        id="id"
        name="id"
        type="text"
        value="abcd1234"
      />
    </div>
    <label
      class="label label-selected"
      for="id"
    >
      Label
    </label>
  </div>
  <div
    class="error"
  >
    This is an error
  </div>
</div>
`;
